[gd_scene load_steps=8 format=3 uid="uid://dtgxhns3m1r1x"]

[ext_resource type="Script" uid="uid://cwq08dk3urhdg" path="res://menu.gd" id="1_3ymnh"]
[ext_resource type="FontFile" uid="uid://clmf8ltqjku6r" path="res://font/StarlightRune-Personal Use.ttf" id="2_3qr6s"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j7r1e"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3ymnh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3qr6s"]
bg_color = Color(0.419813, 0.419813, 0.419813, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3ymnh"]
bg_color = Color(0.359069, 0.359069, 0.359069, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8inha"]
bg_color = Color(0.6, 0.6, 0.6, 0.352941)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3ymnh")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 646.0
theme_override_styles/panel = SubResource("StyleBoxFlat_j7r1e")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -442.0
offset_top = -181.0
offset_right = -94.0
offset_bottom = 189.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/separation = 11

[node name="Button3" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0.654232, 0.654232, 0.654232, 1)
theme_override_colors/font_color = Color(0.187176, 0.187176, 0.187176, 1)
theme_override_fonts/font = ExtResource("2_3qr6s")
theme_override_font_sizes/font_size = 90
theme_override_styles/focus = SubResource("StyleBoxEmpty_3ymnh")
theme_override_styles/hover = SubResource("StyleBoxFlat_3qr6s")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3ymnh")
theme_override_styles/normal = SubResource("StyleBoxFlat_8inha")
text = "Resume"

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0.654232, 0.654232, 0.654232, 1)
theme_override_colors/font_color = Color(0.187176, 0.187176, 0.187176, 1)
theme_override_fonts/font = ExtResource("2_3qr6s")
theme_override_font_sizes/font_size = 90
theme_override_styles/focus = SubResource("StyleBoxEmpty_3ymnh")
theme_override_styles/hover = SubResource("StyleBoxFlat_3qr6s")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3ymnh")
theme_override_styles/normal = SubResource("StyleBoxFlat_8inha")
text = "Options"

[node name="Button2" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0.654232, 0.654232, 0.654232, 1)
theme_override_colors/font_color = Color(0.187176, 0.187176, 0.187176, 1)
theme_override_fonts/font = ExtResource("2_3qr6s")
theme_override_font_sizes/font_size = 90
theme_override_styles/focus = SubResource("StyleBoxEmpty_3ymnh")
theme_override_styles/hover = SubResource("StyleBoxFlat_3qr6s")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3ymnh")
theme_override_styles/normal = SubResource("StyleBoxFlat_8inha")
text = "Title Screen"

[connection signal="pressed" from="VBoxContainer/Button3" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_title_pressed"]
